dropdown artist_type working

--- a/app/src/main/res/layout/fragment_accounttype_artist.xml
+++ b/app/src/main/res/layout/fragment_accounttype_artist.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="0.049" />
 
     <Spinner
+        android:id="@+id/artist_title"
         android:layout_width="300sp"
         android:layout_height="40sp"
         android:layout_gravity="center"
