--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -134,11 +134,17 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginBottom="20dp"
+
             app:tabGravity="center"
-            app:tabIndicator="@drawable/profile_tab_indicator"
-            app:tabIndicatorGravity="stretch"
+            app:tabBackground="@drawable/tab_background_selector"
+            app:tabIndicatorGravity="bottom"
             app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/whiteBase" />
+            app:tabIndicatorHeight="0dp"
+            app:tabSelectedTextColor="@color/whiteBase"
+            app:tabRippleColor="@null"
+            app:tabTextAppearance="@style/CustomTabLayoutText"
+            app:textAllCaps="false"
+            />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
