--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -131,10 +131,10 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:layout_marginBottom="20dp"
-
+            android:layout_gravity="center"
             app:tabGravity="center"
             app:tabBackground="@drawable/tab_background_selector"
             app:tabIndicatorGravity="bottom"
@@ -143,7 +143,6 @@
             app:tabSelectedTextColor="@color/whiteBase"
             app:tabRippleColor="@null"
             app:tabTextAppearance="@style/CustomTabLayoutText"
-            app:textAllCaps="false"
             />
 
         <androidx.viewpager2.widget.ViewPager2
