--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -135,6 +135,7 @@
             android:layout_height="40dp"
             android:layout_marginBottom="20dp"
             android:layout_gravity="center"
+            android:background="@drawable/tablayout_border"
             app:tabGravity="center"
             app:tabBackground="@drawable/tab_background_selector"
             app:tabIndicatorGravity="bottom"
