login stores AuthPrefs and redirects to bottom_navbar_activity

--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -50,8 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="@dimen/button_margin_start"
-        android:layout_marginEnd="@dimen/button_margin_end"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="264dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
